--- a/templates/main.html
+++ b/templates/main.html
@@ -1,12 +1,14 @@
 <!doctype html>
-<title>Hello from Flask</title>
+<title>Owasp Top 10 (2017)</title>
 
-<div class="container jumbotron">
-  {% if name %}
-    <h1>Hello {{ name }}!</h1>
-  {% else %}
-    <h1>Hello, World!</h1>
-  {% endif %}
-</div>
+<h1>Owasp Top 10 (2017)</h1>
+
+<ol>
+  {% for route in routes %}
+    <li>
+      <a href="{{ url_for(route["endpoint"]) }}">{{ route["name"] }}</a>
+    </li>
+  {% endfor %}
+</ol>
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
