--- a/templates/main.html
+++ b/templates/main.html
@@ -1,14 +1,16 @@
-<!doctype html>
-<title>Owasp Top 10 (2017)</title>
+{% extends "layout.html" %}
+{% block content %}
 
-<h1>Owasp Top 10 (2017)</h1>
+  <title>Owasp Top 10 (2017)</title>
 
-<ol>
-  {% for route in routes %}
-    <li>
-      <a href="{{ url_for(route["endpoint"]) }}">{{ route["name"] }}</a>
-    </li>
-  {% endfor %}
-</ol>
+  <h1>Owasp Top 10 (2017)</h1>
 
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+  <ol>
+    {% for route in routes %}
+      <li>
+        <a href="{{ url_for(route["endpoint"]) }}">{{ route["name"] }}</a>
+      </li>
+    {% endfor %}
+  </ol>
+
+{% endblock %}
