--- a/templates/sensitive-data-exposure.html
+++ b/templates/sensitive-data-exposure.html
@@ -1,8 +1,11 @@
 {% extends "layout.html" %}
 {% block content %}
+<body>
+  <div class="container">
+    <h1>Sensitive Data Exposure</h1>
 
-  <div class="container jumbotron">
     <p>blablabla blablabla</p>
-  </div>
 
+  </div>
+</body>
 {% endblock %}
