Better use of the `title`

--- a/templates/A2.html
+++ b/templates/A2.html
@@ -2,7 +2,7 @@
 {% block content %}
 <body>
   <div class="container">
-    <h1>Broken authentication</h1>
+    <h1>{{ title }}</h1>
 
     <div>
       <p>Explications...</p>
