--- a/templates/main.html
+++ b/templates/main.html
@@ -2,7 +2,7 @@
 {% block content %}
 <body>
   <div class="container">
-    <h1>Owasp Top 10 (2017)</h1>
+    <h1>{{ title }}</h1>
 
     <ol>
       {% for route in routes %}
