--- a/templates/A3-register.html
+++ b/templates/A3-register.html
@@ -2,7 +2,7 @@
 {% block content %}
 <body>
   <div class="container">
-    <h1>Sensitive Data Exposure</h1>
+    <h1>{{ title }}</h1>
 
     <div>
       <p>Explications...</p>
