Open link in new tab

--- a/templates/A7.html
+++ b/templates/A7.html
@@ -1,3 +1,4 @@
+{# TODO: implement a congrats message! #}
 <script>
 (function() {
   var _old_alert = window.alert;
@@ -26,7 +27,7 @@
           Les conséquences d'une faille XSS peuvent être multiples : en faisant exécuter du code arbitraire par un client, un attaquant peut, entre autres : voler sa session, télécharger des logiciels malveillants, exécuter des opérations sur le site visé, etc.
         </p>
 
-        <a href="https://www.owasp.org/index.php/Top_10_2017-A3-Cross-Site_Scripting_(XSS)">En savoir plus</a>
+        <a target="_blank" href="https://www.owasp.org/index.php/Top_10_2017-A3-Cross-Site_Scripting_(XSS)">En savoir plus</a>
       </div>
     </div>
 
