--- a/templates/A3-login.html
+++ b/templates/A3-login.html
@@ -9,9 +9,8 @@
     </div>
 
     <div>
-      <form action="?" method="POST" onsubmit="login();return false;">
-        Firstname: <input type="text" id="firstname" value=""/>
-        Password: <input type="password" id="password" value=""/>
+      <form action="/A3/login" method="POST">
+        ID: <input type="text" name="ID" id="ID" value=""/>
         <input class="button" type="submit" value="Login" />
       </form>
     </div>
