--- a/templates/A8.html
+++ b/templates/A8.html
@@ -6,7 +6,7 @@
 
     <div class="row">
       <div class="alert alert-info col-md-12">
-        <h3>Qu'est-ce qu'une "Insecure Deserialization?</h3>
+        <h3>Qu'est-ce qu'une "Insecure Deserialization" ?</h3>
         <p>
           Les données extérieures ne doivent pas être considérées bien formées. Des données malformées peuvent être utilisées pour compromettre la sécurité d'un système ou la logique d'une application.
         </p>
