modification de A2 (qui ne marche pas encore

--- a/templates/A2.html
+++ b/templates/A2.html
@@ -9,10 +9,10 @@
     </div>
 
     <div>
-      <form action="?" method="POST" onsubmit="register();return false;">
-        Login: <input type="text" id="login" value=""/>
-        Password: <input type="password" id="password" value=""/>
-        <input class="button" type="submit" value="Register" />
+      <form method="POST" action="/A2/login">
+        Login: <input type="text" name="login" id="login" value=""/>
+        Password: <input type="password" name="password" id="password" value=""/>
+        <input class="button" type="submit" value="login"/>
       </form>
     </div>
   </div>
